Fix all 14 bugs: L4 GPU optimization, WandB, CLI args, torch.compile, gradient checkpointing, path fixes
- Scale configs from L40S (48GB) to L4 (24GB): d_model 256, 6 layers, batch 256
- Fix torch.compile: compile sub-modules not whole LightningModule
- Fix tcn.py: use parametrizations.weight_norm (PyTorch 2.1+ compat)
- Fix mpae.py: MAE gradient checkpointing, warmup scheduler, batch detection
- Fix psd_former.py: forward gradient_checkpointing to TransformerEncoder
- Fix splits.py: remap indices after unkn filter to original manifest positions
- Fix parse_dataset.py: auto-discover .npy files via rglob
- Fix download.py: auto-detect extracted data location
- Add CLI args to all training scripts: --manifest --split --epochs --batch_size --accelerator --devices
- Add WandB logger (auto-enables when WANDB_API_KEY is set)
- Add wandb to requirements.txt
- Fix run_25pct_win.py: correct paths and CLI args
- Update LIGHTNING_AI_QUICKSTART.md for L4 GPU
- Remove outdated L40S_OPTIMIZATIONS.md

--- a/configs/base.yaml
+++ b/configs/base.yaml
@@ -1,11 +1,12 @@
-# Base configuration — L40S optimized
+# Base configuration — L4 (24GB) optimized
 seed: 42
 data_dir: "data/"
 results_dir: "results/"
-precision: "bf16-mixed"     # bfloat16 for L40S (better than fp16)
-num_workers: 8              # Multi-core CPU on Lightning AI
+precision: "bf16-mixed"     # bfloat16 for L4
+num_workers: 4              # L4 has fewer cores than L40S
 persistent_workers: true    # Keep workers alive between epochs
 pin_memory: true
+prefetch_factor: 2          # Prefetch batches per worker
 
 # Dataset
 dataset:
